<resources>
    <string name="app_name">KMC Dalit Bandhu</string>
    <string name="title_activity_user_details">userDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_collector_grounding">CollectorGrounding</string>
    <string name="clong_shortcut">Collector Login</string>
    <string name="cshort_shortcut">Collector Login</string>
    <string name="pslong_shortcut">PS Login</string>
    <string name="psshort_shortcut">PS Login</string>
    <string name="splong_shortcut">SP Login</string>
    <string name="spshort_shortcut">SP Login</string>
    <string name="solong_shortcut">SO Login</string>
    <string name="soshort_shortcut">SO Login</string>
    <string name="title_activity_collector_search">CollectorSearch</string>
</resources>